@@ -6,6 +6,7 @@
 * Option added to set post images widget title - ADDED
 * Option added in map widget/shortcode to tick/untick categories on the map - ADDED
 * Exclude GD template pages from Yoast XML page sitemap - ADDED
+* Use of additional css class in block editor breaks the block - FIXED
 
 = 2.0.0.67 =
 * Fail to save feature image for new listing when post revision is enabled - FIXED
